--- a/hackernews/hackernews-react-apollo/package.json
+++ b/hackernews/hackernews-react-apollo/package.json
@@ -6,6 +6,7 @@
     "apollo-client-preset": "^1.0.8",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
